--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 </head>
 <body>
-    <h1>FEEDBACK FORM</h1>
+    <h1>Login page</h1>
         <div><input placeholder="enter username"/></div>
         <div><input placeholder="enter email"    type="email"/></div>
         <div><input placeholder="enter password"  type="password"/></div>
